--- a/pages/admin.html
+++ b/pages/admin.html
@@ -94,8 +94,10 @@
             </div> 
             <p class="small-preview__title">New Post</p>  
             <p class="small-preview__subtitle">Please, enter any description</p>
-            <div class="small-preview_card-info">
-              
+            <div class="small-preview__card-info">
+              <img class="card-info__author-photo" src="../static/img/author_photo_placeholder.svg">
+              <p class="card-info__author-name">Enter author name</p>
+              <p class="card-info__date">4/19/2023</p>
             </div>
           </div>
             
