--- a/pages/post.html
+++ b/pages/post.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Index</title>
+  <title>Post</title>
   <link href="../static/css/main.css" rel="stylesheet">
   <link href="../static/css/post.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Oxygen" rel="stylesheet">
@@ -16,7 +16,7 @@
         <img class="hood-content__logo" src="../static/img/escape_black.svg" alt="Escape.">
         <nav>
           <ul class="nav-header">
-            <li><a class="nav-header__link__black" href="#">HOME</a></li>
+            <li><a class="nav-header__link__black" href="/home">HOME</a></li>
             <li><a class="nav-header__link__black" href="#">CATEGORIES</a></li>
             <li><a class="nav-header__link__black" href="#">ABOUT</a></li>
             <li><a class="nav-header__link__black" href="#">CONTACT</a></li>
