--- a/pages/index.html
+++ b/pages/index.html
@@ -16,7 +16,7 @@
         <img class="hood-content__logo" src="../static/img/escape_white.svg" alt="Escape.">
         <nav>
           <ul class="nav-header">
-            <li><a class="nav-header__link__white" href="#">HOME</a></li>
+            <li><a class="nav-header__link__white" href="/home">HOME</a></li>
             <li><a class="nav-header__link__white" href="#">CATEGORIES</a></li>
             <li><a class="nav-header__link__white" href="#">ABOUT</a></li>
             <li><a class="nav-header__link__white" href="#">CONTACT</a></li>
@@ -98,6 +98,7 @@
       </div>
     </section>
   </div>
+  <div class="pre-footer"></div>
   <footer class="footer">
     <img class="footer__image" src="../static/img/stay_in_touch.png" alt="Stay in touch">
     <div class="footer__in-touch">
